# youtube-comment-downloader

./: README.md  pyproject.toml  requirements.txt  setup.cfg
youtube_comment_downloader/: __init__.py  __main__.py  downloader.py
