[project]
name = "youtube-comment-downloader"
version = "0.1.0"
description = "Simple script for downloading Youtube comments without using the Youtube API"
authors = [
    { name = "Egbert Bouman", email = "ebouman@gmail.com" }
]
dependencies = [
    "dateparser",
    "requests",
]
readme = "README.md"
requires-python = ">= 3.8"
license="MIT"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3"
]

[project.urls]
homepage = "https://github.com/egbertbouman/youtube-comment-downloader"

[project.scripts]
yt-dlc = "youtube_comment_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest",
    "pytest-benchmark",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["youtube_comment_downloader"]


[tool.rye.scripts]
fmt = "ruff format"

"lint:rye:check" = "rye lint"
"lint:ruff:check" = "ruff check --select I ."
"lint:ruff:fix" = "ruff check --select I --fix ."

lint = { chain  = [
        # "lint:mypy",
        "lint:rye:check",
        "lint:ruff:check" ] }
fix = { chain = [
        "lint:ruff:fix",
        "fmt"] }
test = "pytest"
bench = "pytest-benchmark"